Fixed home fonts on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -192,7 +192,7 @@ h2 {
 
 .home .date {
   font-weight: 300;
-  font-size: 4.8rem !important;
+  font-size: 3rem;
   margin: 0.5rem 0;
 }
 
@@ -244,7 +244,7 @@ h2 {
 @media screen and (min-width: 768px) {
   .home .date,
   .home .university {
-    font-size: 3.6rem;
+    font-size: 4.8rem;
   }
 }
 
